--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "airtable": "^0.12.2",
     "framer-motion": "^11.0.14",
     "next": "14.1.3",
     "react": "^18",
